I wanted to merge a branch into master, while the function in gitGUI seems hard to use, so I copyed the src from the branch, then checkout the master, then copy the src into the master Now, I rescan and find the commit the diffrents to complete the merge action.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Fri Jan 18 16:50:19 EST 2013
-#Fri Jan 18 16:50:19 EST 2013
+#Updated at Tue Jan 22 15:37:18 EST 2013
+#Tue Jan 22 15:37:18 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -56,9 +56,11 @@ label_com_aeiou_bigbang_domain_useraccount_name=Name
 label_com_aeiou_bigbang_domain_useraccount_password=Password
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_version=Version
+label_public_index=Public Controller View
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
+menu_category_controller_label=Controller
 menu_category_customize_label=Customize
 menu_category_remark_label=Remark
 menu_category_twitter_label=Twitter
@@ -69,6 +71,7 @@ menu_item_circle_list_label=Circles
 menu_item_circle_new_label=Circle
 menu_item_content_list_label=Contents
 menu_item_content_new_label=Content
+menu_item_controller__publicindex_id_label=Public Controller View
 menu_item_customize_list_label=Customizes
 menu_item_customize_new_label=Customize
 menu_item_remark_list_label=Remarks
