--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Tue Jan 22 15:37:18 EST 2013
-#Tue Jan 22 15:37:18 EST 2013
+#Created by JInto - www.guh-software.de
+#Tue Jan 29 09:51:14 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -56,7 +56,7 @@ label_com_aeiou_bigbang_domain_useraccount_name=Name
 label_com_aeiou_bigbang_domain_useraccount_password=Password
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_index=Public Controller View
+label_public_index=Go his big uncle's ( |\:------------------------------>)
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
