added create button, now trying to find a way to search content with specific top-level Tag(BigTag).

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Jan 29 11:10:08 EST 2013
+#Wed Jan 30 11:17:14 EST 2013
 button_cancel=Cancel
 button_end=End
 button_find=Find
@@ -12,6 +12,7 @@ button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
 button_submit=Submit
 button_update=Update
+contributeContent=I Wanna Add Something
 entity_create=Create new {0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
