maded the interface display 2 content list, while the application actually return all content, next is to return content with tag matching the param.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Created by JInto - www.guh-software.de
-#Tue Jan 29 09:51:14 EST 2013
+#Updated at Wed Jan 30 16:12:36 EST 2013
+#Wed Jan 30 16:12:36 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -17,6 +17,7 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
+label_com_aeiou_bigbang_domain_content_commonbigtag=Common Big Tag
 label_com_aeiou_bigbang_domain_content_conentcache=Conent Cache
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_plural=Contents
