--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Jan 30 11:17:14 EST 2013
+#Thu Jan 31 13:39:58 EST 2013
 button_cancel=Cancel
 button_end=End
 button_find=Find
@@ -51,12 +51,14 @@ global_sponsored=Sponsored by SpringSource
 global_theme=Theme
 global_theme_alt=alt
 global_theme_standard=standard
+international=international news
 list_first=First Page
 list_last=Last Page
 list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
+local=local news
 security_login_form_name=Name
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
