--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed Jan 30 16:12:36 EST 2013
-#Wed Jan 30 16:12:36 EST 2013
+#Created by JInto - www.guh-software.de
+#Thu Jan 31 14:05:05 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -57,7 +57,7 @@ label_com_aeiou_bigbang_domain_useraccount_name=Name
 label_com_aeiou_bigbang_domain_useraccount_password=Password
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_index=Go his big uncle's ( |\:------------------------------>)
+label_public_index=Go his big uncle's, \u5317\u4EAC\u53C8\u4E0B\u96FE\u4E86 ( |\:-x)
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
