--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jan 31 13:39:58 EST 2013
+#Thu Jan 31 14:56:16 EST 2013
 button_cancel=Cancel
 button_end=End
 button_find=Find
@@ -40,6 +40,7 @@ field_invalid_integer=Integer numbers only
 field_invalid_number=Number with \\'-\\' or \\'.\\' allowed
 field_required=required
 field_simple_validation=Enter {0} {1}
+fun=fun stuff
 global_generic={0}
 global_language=Language
 global_language_switch=Switch language to {0}
