changed to 2 columns, the contentpane is not necessary, will try to remove it.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jan 31 14:56:16 EST 2013
+#Thu Jan 31 17:06:49 EST 2013
 button_cancel=Cancel
 button_end=End
 button_find=Find
@@ -52,6 +52,7 @@ global_sponsored=Sponsored by SpringSource
 global_theme=Theme
 global_theme_alt=alt
 global_theme_standard=standard
+health=health
 international=international news
 list_first=First Page
 list_last=Last Page
