every content display only 8 items. admin can also contribute contents. next: I'll add a login page for it.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Jan 31 17:06:49 EST 2013
+#Fri Feb 01 14:39:13 EST 2013
 button_cancel=Cancel
 button_end=End
 button_find=Find
@@ -70,6 +70,8 @@ security_login_title=Spring Security Login
 security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
 security_logout=Logout
 selenium_menu_test_suite=Test Suite
+study=study
+techneque=techneque
 webflow_endstate_message=You have now reached the end of this flow.
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
