Now user register is supported, not good enough:) next, I'll add a customize tag support.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,6 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 01 14:39:13 EST 2013
+#Mon Feb 04 17:27:23 EST 2013
+agree=I Agree\!
 button_cancel=Cancel
 button_end=End
 button_find=Find
@@ -65,10 +66,12 @@ security_login_form_name=Name
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
 security_login_form_password_message=Enter your password
-security_login_message=You have tried to access a protected area of this application. By default you can login as "admin", with a password of "admin".
-security_login_title=Spring Security Login
+security_login_message=This is for registered user,  new user please sign up first in the window right down this one.
+security_login_title=Registered User Login Here
+security_login_title2=New User Go Here
 security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
 security_logout=Logout
+security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
 selenium_menu_test_suite=Test Suite
 study=study
 techneque=techneque
