setted the type of tag as user name.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 04 17:27:23 EST 2013
+#Tue Feb 05 10:21:01 EST 2013
 agree=I Agree\!
 button_cancel=Cancel
 button_end=End
@@ -62,6 +62,7 @@ list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
 local=local news
+science=science
 security_login_form_name=Name
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
