--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 05 13:35:53 EST 2013
+#Tue Feb 05 14:39:10 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -17,13 +17,13 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
-label_com_aeiou_bigbang_domain_content_commonbigtag=Common Big Tag
+label_com_aeiou_bigbang_domain_content_commonbigtag=Public Tag
 label_com_aeiou_bigbang_domain_content_conentcache=Conent Cache
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=Publisher
 label_com_aeiou_bigbang_domain_content_sourceurl=Source U R L
-label_com_aeiou_bigbang_domain_content_tags=Tags
+label_com_aeiou_bigbang_domain_content_tags=My Tags
 label_com_aeiou_bigbang_domain_content_title=Title
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
