added current user as the default type when creating a tag.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,11 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 05 14:39:10 EST 2013
+#Tue Feb 05 15:33:15 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
-label_com_aeiou_bigbang_domain_bigtag_type=Type
+label_com_aeiou_bigbang_domain_bigtag_type=Owner Name
 label_com_aeiou_bigbang_domain_bigtag_version=Version
 label_com_aeiou_bigbang_domain_circle=Circle
 label_com_aeiou_bigbang_domain_circle_circlename=Circle Name
