--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,35 +1,35 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 06 11:51:43 EST 2013
-=\u7A7A
-Tag_Admin_fun=\u641E\u7B11
-Tag_Admin_health=\u5065\u5EB7
-Tag_Admin_international=\u56FD\u9645\u65B0\u95FB
-Tag_Admin_local=\u56FD\u5185\u65B0\u95FB
-Tag_Admin_other=\u5176\u4ED6
-Tag_Admin_science=\u79D1\u6280
-Tag_Admin_study=\u5916\u8BED\u5B66\u4E60
-Tag_Admin_techneque=\u6280\u672F\u8D44\u6599
-agree=\u4E25\u91CD\u540C\u610F\uFF01
-button_cancel=\u53D6\u6D88
+#Wed Feb 06 11:36:30 EST 2013
+=EMPTY
+Tag_Admin_fun=fun stuff
+Tag_Admin_health=health
+Tag_Admin_international=international news
+Tag_Admin_local=local news
+Tag_Admin_other=other
+Tag_Admin_science=science
+Tag_Admin_study=study
+Tag_Admin_techneque=techneque
+agree=I Agree\!
+button_cancel=Cancel
 button_end=End
 button_find=Find
-button_home=\u9996\u9875
+button_home=Home
 button_proceed=Proceed
 button_reset=Reset
-button_save=\u4FDD\u5B58
+button_save=Save
 button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
 button_submit=Submit
 button_update=Update
-contributeContent=\u6211\u6765\u52A0\u4E00\u4E2A\uFF01
+contributeContent=I Wanna Add Something
 entity_create=Create new {0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
 entity_dependency_required=The following dependencies need to be created first\:
 entity_find=Find {0}
 entity_list_all=List all {0}
-entity_not_found=\u6CA1\u6709\u627E\u5230\u4EFB\u4F55\u201D{0}\u201C\u7C7B\u8BB0\u5F55\u3002
+entity_not_found=No {0} found.
 entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
@@ -67,18 +67,18 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-security_login_form_name=\u7528\u6237
-security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
-security_login_form_password=\u5BC6\u7801
-security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
-security_login_message=\u8FD9\u91CC\u662F\u5DF2\u6CE8\u518C\u7528\u6237\u767B\u5F55\u7528\u7684\uFF0C\u65B0\u7528\u6237\u8BF7\u70B9\u53F3\u8FB9\u7684\u7A97\u53E3\u7684\u201D\u540C\u610F\u201C\u8FDE\u63A5\u6CE8\u518C\u5148\u3002\u8C22\u8C22~
-security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
-security_login_title2=\u65B0\u7528\u6237\u8BF7\u770B\u8FC7\u6765
-security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
-security_logout=\u6CE8\u9500\u5F53\u524D\u7528\u6237
+security_login_form_name=Name
+security_login_form_name_message=Enter your name
+security_login_form_password=Password
+security_login_form_password_message=Enter your password
+security_login_message=This is for registered user,  new user please sign up first in the window right down this one.
+security_login_title=Registered User Login Here
+security_login_title2=New User Go Here
+security_login_unsuccessful=Your login attempt was not successful, try again. Reason\: 
+security_logout=Logout
 security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
 selenium_menu_test_suite=Test Suite
-webflow_endstate_message=\u8FD9\u5DF2\u7ECF\u662F\u6700\u540E\u4E86
+webflow_endstate_message=You have now reached the end of this flow.
 webflow_endstate_title=Spring Web Flow - End State
 webflow_menu_enter=Enter {0} flow
 webflow_state1_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
