--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 06 13:22:46 EST 2013
+#Wed Feb 06 21:41:29 EST 2013
 =\u7A7A
 Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
@@ -56,7 +56,7 @@ global_language_switch=Switch language to {0}
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
 global_menu_new=Create new {0}
-global_menu_readmore=\u591A\u591A...
+global_menu_readmore=>>>
 global_sponsored=Sponsored by SpringSource
 global_theme=Theme
 global_theme_alt=alt
