fixed the bug that page account not right in button of table.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 06 21:41:29 EST 2013
+#Thu Feb 07 00:31:17 EST 2013
 =\u7A7A
 Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
@@ -15,12 +15,12 @@ button_end=End
 button_find=Find
 button_home=\u9996\u9875
 button_proceed=Proceed
-button_reset=Reset
+button_reset=\u91CD\u5199
 button_save=\u4FDD\u5B58
 button_showcookie=Show Cookie
 button_showmessage=Show Message
 button_showstacktrace=Show Stack Trace
-button_submit=Submit
+button_submit=\u767B\u5F55
 button_update=Update
 contributeContent=\u6211\u6765\u52A0\u4E00\u4E2A\uFF01
 entity_create=Create new {0}
@@ -51,7 +51,7 @@ field_invalid_number=Number with \\'-\\' or \\'.\\' allowed
 field_required=required
 field_simple_validation=Enter {0} {1}
 global_generic={0}
-global_language=Language
+global_language=\u8BED\u8A00
 global_language_switch=Switch language to {0}
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
