added personal space, not finished. now I am working on adding tags, added an "add" button, and trying to make the button displayed in the save line.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,6 +1,8 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 07 00:31:17 EST 2013
-=\u7A7A
+#Thu Feb 07 16:39:00 EST 2013
+\ =\u7A7A
+Big\ Tag=\u7C7B\u522B
+Content=\u5185\u5BB9
 Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
 Tag_Admin_international=\u56FD\u9645\u65B0\u95FB
@@ -13,9 +15,9 @@ agree=\u4E25\u91CD\u540C\u610F\uFF01
 button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
-button_home=\u9996\u9875
+button_home=\u5927\u4E3B\u7F16
 button_proceed=Proceed
-button_reset=\u91CD\u5199
+button_reset=\u6E05\u7A7A
 button_save=\u4FDD\u5B58
 button_showcookie=Show Cookie
 button_showmessage=Show Message
@@ -23,7 +25,7 @@ button_showstacktrace=Show Stack Trace
 button_submit=\u767B\u5F55
 button_update=Update
 contributeContent=\u6211\u6765\u52A0\u4E00\u4E2A\uFF01
-entity_create=Create new {0}
+entity_create=\u53D1\u5E03\u65B0\u7684{0}
 entity_delete=Delete {0}
 entity_delete_confirm=Are you sure want to delete this item?
 entity_dependency_required=The following dependencies need to be created first\:
@@ -33,6 +35,7 @@ entity_not_found=\u6CA1\u6709\u627E\u5230\u4EFB\u4F55\u201D{0}\u201C\u7C7B\u8BB0
 entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
+entity_tag_create=\u6211\u9700\u8981\u4E00\u4E2A\u65B0\u6807\u7B7E\uFF01
 entity_update=Update {0}
 error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
 error_dataaccessfailure_title=Data access failure
@@ -58,7 +61,7 @@ global_menu_list=List all {0}
 global_menu_new=Create new {0}
 global_menu_readmore=>>>
 global_sponsored=Sponsored by SpringSource
-global_theme=Theme
+global_theme=\u754C\u9762\u98CE\u683C
 global_theme_alt=alt
 global_theme_standard=standard
 list_first=First Page
