--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 05 15:33:15 EST 2013
+#Thu Feb 07 14:52:40 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -17,14 +17,14 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
-label_com_aeiou_bigbang_domain_content_commonbigtag=Public Tag
-label_com_aeiou_bigbang_domain_content_conentcache=Conent Cache
+label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u7684\u6807\u7B7E
+label_com_aeiou_bigbang_domain_content_conentcache=\u5185\u5BB9\u53EF\u5907\u4EFD\u8FC7\u6765
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_plural=Contents
-label_com_aeiou_bigbang_domain_content_publisher=Publisher
-label_com_aeiou_bigbang_domain_content_sourceurl=Source U R L
-label_com_aeiou_bigbang_domain_content_tags=My Tags
-label_com_aeiou_bigbang_domain_content_title=Title
+label_com_aeiou_bigbang_domain_content_publisher=\u5927\u4E3B\u7F16
+label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740
+label_com_aeiou_bigbang_domain_content_tags=\u4E2A\u4EBA\u7A7A\u95F4\u7684\u6807\u7B7E
+label_com_aeiou_bigbang_domain_content_title=\u7ED9\u4E2A\u6807\u9898\u5148
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -57,7 +57,7 @@ label_com_aeiou_bigbang_domain_useraccount_name=Name
 label_com_aeiou_bigbang_domain_useraccount_password=Password
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_index=Go his big uncle's, \u5317\u4EAC\u53C8\u4E0B\u96FE\u4E86 ( |\:-x)
+label_public_index=\u8FD9\u662F\u5927\u4E3B\u7F16{0}\u7684\u7A7A\u95F4--{1}
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
