--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,6 +1,8 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 06 11:36:30 EST 2013
-=EMPTY
+#Thu Feb 07 16:39:00 EST 2013
+\ =EMPTY
+Big\ Tag=
+Content=Content
 Tag_Admin_fun=fun stuff
 Tag_Admin_health=health
 Tag_Admin_international=international news
@@ -33,6 +35,7 @@ entity_not_found=No {0} found.
 entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
+entity_tag_create=I want to create a new tag\!
 entity_update=Update {0}
 error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
 error_dataaccessfailure_title=Data access failure
