can add tag now, and in same line now.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 07 16:39:00 EST 2013
+#Thu Feb 07 17:04:57 EST 2013
 \ =\u7A7A
 Big\ Tag=\u7C7B\u522B
 Content=\u5185\u5BB9
@@ -35,7 +35,7 @@ entity_not_found=\u6CA1\u6709\u627E\u5230\u4EFB\u4F55\u201D{0}\u201C\u7C7B\u8BB0
 entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
-entity_tag_create=\u6211\u9700\u8981\u4E00\u4E2A\u65B0\u6807\u7B7E\uFF01
+entity_tag_create=\u65B0\u52A0\u4E00\u4E2A\u6807\u7B7E\uFF01
 entity_update=Update {0}
 error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
 error_dataaccessfailure_title=Data access failure
