added some info on the top, may not needed in future.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 07 14:52:40 EST 2013
+#Thu Feb 07 23:51:05 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -57,7 +57,7 @@ label_com_aeiou_bigbang_domain_useraccount_name=Name
 label_com_aeiou_bigbang_domain_useraccount_password=Password
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_version=Version
-label_public_index=\u8FD9\u662F\u5927\u4E3B\u7F16{0}\u7684\u7A7A\u95F4--{1}
+label_public_index=\u6B22\u8FCE\u6765\u5927\u4E3B\u7F16{0}\u7684\u7A7A\u95F4----{1}
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
