--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 07 16:39:00 EST 2013
+#Fri Feb 08 00:02:57 EST 2013
 \ =EMPTY
 Big\ Tag=
 Content=Content
@@ -70,6 +70,8 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
+public=public
+publicDescription=Good Filtered News For Specific Person\uFF0CManaged Persional Links For Yourself\uFF0CInfomation Platform For Team and Friends, And More... 
 security_login_form_name=Name
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
