before changing the title from “给个标题先”into "标题”。

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 08 00:02:57 EST 2013
+#Fri Feb 08 13:54:55 EST 2013
 \ =EMPTY
 Big\ Tag=
 Content=Content
@@ -70,6 +70,7 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
+pleaseAddSomeContentHere=Hey Boddy, Don't forget to add some interesting stuff by clicking this button\:--------------------------------------------------------------------------->
 public=public
 publicDescription=Good Filtered News For Specific Person\uFF0CManaged Persional Links For Yourself\uFF0CInfomation Platform For Team and Friends, And More... 
 security_login_form_name=Name
