--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 07 23:51:05 EST 2013
+#Fri Feb 08 16:52:48 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_id=Id
@@ -16,7 +16,7 @@ label_com_aeiou_bigbang_domain_circle_members=Members
 label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
-label_com_aeiou_bigbang_domain_content=Content
+label_com_aeiou_bigbang_domain_content=\u5185\u5BB9
 label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u7684\u6807\u7B7E
 label_com_aeiou_bigbang_domain_content_conentcache=\u5185\u5BB9\u53EF\u5907\u4EFD\u8FC7\u6765
 label_com_aeiou_bigbang_domain_content_id=Id
@@ -24,7 +24,7 @@ label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=\u5927\u4E3B\u7F16
 label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740
 label_com_aeiou_bigbang_domain_content_tags=\u4E2A\u4EBA\u7A7A\u95F4\u7684\u6807\u7B7E
-label_com_aeiou_bigbang_domain_content_title=\u7ED9\u4E2A\u6807\u9898\u5148
+label_com_aeiou_bigbang_domain_content_title=\u5185\u5BB9\u6807\u9898
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
@@ -60,7 +60,7 @@ label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_public_index=\u6B22\u8FCE\u6765\u5927\u4E3B\u7F16{0}\u7684\u7A7A\u95F4----{1}
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
-menu_category_content_label=Content
+menu_category_content_label=\u5185\u5BB9
 menu_category_controller_label=Controller
 menu_category_customize_label=Customize
 menu_category_remark_label=Remark
