--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 08 00:04:49 EST 2013
+#Fri Feb 08 13:54:55 EST 2013
 \ =\u7A7A
 Big\ Tag=\u7C7B\u522B
 Content=\u5185\u5BB9
@@ -70,8 +70,9 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
+pleaseAddSomeContentHere=\u54E5\u4EEC\uFF0C\u5982\u679C\u5728\u522B\u7684\u7F51\u7AD9\u4E0A\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\uFF0C\u522B\u5FD8\u70B9\u5DE6\u8FB9\u6309\u94AE\uFF0C\u7ED9\u52A0\u4E2A\u94FE\u63A5\u8FD9\u91CC\uFF01 ( |\:------------------------------>)
 public=\u516C\u5171
-publicDescription=\u7CBE\u9009\u4F18\u8D28\u65B0\u95FB\u5E73\u53F0\u3001\u7BA1\u7406\u5E38\u7528\u7F51\u9875\u8FDE\u63A5\u3001\u670B\u53CB\u56E2\u961F\u5171\u4EAB\u4FE1\u606F\u3001\u7B49\u7B49\uFF0C\u8BF7\u4F60\u5E2E\u6211\u60F3\u60F3\u8FD9\u4E2A\u5E73\u53F0\u8FD8\u80FD\u591F\u505A\u4EC0\u4E48\u7528\uFF1F\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002\u3002
+publicDescription=\u7CBE\u9009\u4F18\u8D28\u65B0\u95FB\u5E73\u53F0\u3001\u7BA1\u7406\u5E38\u7528\u7F51\u9875\u8FDE\u63A5\u3001\u670B\u53CB\u56E2\u961F\u5171\u4EAB\u4FE1\u606F\u3001\u7B49\u7B49\uFF0C\u8BF7\u4F60\u5E2E\u6211\u60F3\u60F3\u8FD9\u4E2A\u5E73\u53F0\u8FD8\u80FD\u591F\u505A\u4EC0\u4E48\u7528\uFF1F
 security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801
