added resource for all entities, so when creating an entity form admin console, we can see the Chinese of the entity name. otherwise will throw exception.
Signed-off-by: tjiang <casproteus@hotmail.com>

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,8 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 08 13:54:55 EST 2013
+#Sun Feb 10 00:33:03 EST 2013
 \ =EMPTY
 Big\ Tag=
+Circle=Circle
 Content=Content
+Customize=Customize
+Remark=Remark
 Tag_Admin_fun=fun stuff
 Tag_Admin_health=health
 Tag_Admin_international=international news
@@ -11,6 +14,8 @@ Tag_Admin_other=other
 Tag_Admin_science=science
 Tag_Admin_study=study
 Tag_Admin_techneque=techneque
+Twitter=Twitter
+User\ Account=User Account
 agree=I Agree\!
 button_cancel=Cancel
 button_end=End
