--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,8 +1,11 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 08 13:54:55 EST 2013
+#Sun Feb 10 00:33:03 EST 2013
 \ =\u7A7A
 Big\ Tag=\u7C7B\u522B
+Circle=\u5708\u5B50
 Content=\u5185\u5BB9
+Customize=\u81EA\u5B9A\u4E49
+Remark=\u8BC4\u8BBA
 Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
 Tag_Admin_international=\u56FD\u9645\u65B0\u95FB
@@ -11,6 +14,8 @@ Tag_Admin_other=\u5176\u4ED6
 Tag_Admin_science=\u79D1\u6280
 Tag_Admin_study=\u5916\u8BED\u5B66\u4E60
 Tag_Admin_techneque=\u6280\u672F\u8D44\u6599
+Twitter=\u63A8\u7279
+User\ Account=\u7528\u6237
 agree=\u4E25\u91CD\u540C\u610F\uFF01
 button_cancel=\u53D6\u6D88
 button_end=End
