Now we support page navigation. and fixed list all page's caption display.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,11 +1,12 @@
 #Created by JInto - www.guh-software.de
-#Sun Feb 10 00:33:03 EST 2013
+#Mon Feb 11 15:37:47 EST 2013
 \ =\u7A7A
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
 Customize=\u81EA\u5B9A\u4E49
 Remark=\u8BC4\u8BBA
+Tag_Admin_allcontents=\u5168\u90E8\u5185\u5BB9
 Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
 Tag_Admin_international=\u56FD\u9645\u65B0\u95FB
