--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,11 +1,12 @@
 #Created by JInto - www.guh-software.de
-#Sun Feb 10 00:33:03 EST 2013
+#Mon Feb 11 15:37:46 EST 2013
 \ =EMPTY
-Big\ Tag=
+Big\ Tag=Category
 Circle=Circle
 Content=Content
 Customize=Customize
 Remark=Remark
+Tag_Admin_allcontents=All Contents
 Tag_Admin_fun=fun stuff
 Tag_Admin_health=health
 Tag_Admin_international=international news
