now we support chinese or japanese (any language) as publisher or space owner.

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 11 15:37:46 EST 2013
+#Mon Feb 11 22:25:13 EST 2013
 \ =EMPTY
 Big\ Tag=Category
 Circle=Circle
@@ -97,6 +97,6 @@ webflow_state1_message=This is a simple example to get started with Spring Web F
 webflow_state1_title=Spring Web Flow - View State One
 webflow_state2_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
 webflow_state2_title=Spring Web Flow - View State Two
-welcome_h3=Welcome to {0}
+welcome_h3=Welcome to BookMarks
 welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
 welcome_titlepane=Welcome to {0}
