--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 11 15:37:47 EST 2013
+#Mon Feb 11 22:25:13 EST 2013
 \ =\u7A7A
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
@@ -97,6 +97,6 @@ webflow_state1_message=This is a simple example to get started with Spring Web F
 webflow_state1_title=Spring Web Flow - View State One
 webflow_state2_message=This is a simple example to get started with Spring Web Flow. The buttons below lead you to another view state (Proceed) or to an end state.
 webflow_state2_title=Spring Web Flow - View State Two
-welcome_h3=Welcome to {0}
+welcome_h3=\u6B22\u8FCE\u56DE\u5230BookMarks\uFF01
 welcome_text=Spring Roo provides interactive, lightweight and user customizable tooling that enables rapid delivery of high performance enterprise Java applications.
 welcome_titlepane=Welcome to {0}
