added private in BigTag

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,7 +1,8 @@
-#Created by JInto - www.guh-software.de
-#Thu Feb 07 23:51:05 EST 2013
+#Updated at Tue Feb 12 11:24:33 EST 2013
+#Tue Feb 12 11:24:33 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
+label_com_aeiou_bigbang_domain_bigtag_authority=Authority
 label_com_aeiou_bigbang_domain_bigtag_id=Id
 label_com_aeiou_bigbang_domain_bigtag_plural=Big Tags
 label_com_aeiou_bigbang_domain_bigtag_tagname=Tag Name
