--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Tue Feb 12 11:24:33 EST 2013
-#Tue Feb 12 11:24:33 EST 2013
+#Updated at Tue Feb 12 12:22:38 EST 2013
+#Tue Feb 12 12:22:38 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -18,6 +18,7 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
+label_com_aeiou_bigbang_domain_content_authority=Authority
 label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u7684\u6807\u7B7E
 label_com_aeiou_bigbang_domain_content_conentcache=\u5185\u5BB9\u53EF\u5907\u4EFD\u8FC7\u6765
 label_com_aeiou_bigbang_domain_content_id=Id
