changed the uncommontag into single select.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Tue Feb 12 12:22:38 EST 2013
-#Tue Feb 12 12:22:38 EST 2013
+#Created by JInto - www.guh-software.de
+#Tue Feb 12 14:02:29 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -18,15 +18,15 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
-label_com_aeiou_bigbang_domain_content_authority=Authority
-label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u7684\u6807\u7B7E
-label_com_aeiou_bigbang_domain_content_conentcache=\u5185\u5BB9\u53EF\u5907\u4EFD\u8FC7\u6765
+label_com_aeiou_bigbang_domain_content_authority=\u5BF9\u54EA\u4E9B\u4EBA\u53EF\u89C1
+label_com_aeiou_bigbang_domain_content_commonbigtag=\u516C\u5171\u7A7A\u95F4\u6807\u7B7E *
+label_com_aeiou_bigbang_domain_content_conentcache=\u7F51\u9875\u5185\u5BB9\u62F7\u8D1D
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=\u5927\u4E3B\u7F16
-label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740
-label_com_aeiou_bigbang_domain_content_tags=\u4E2A\u4EBA\u7A7A\u95F4\u7684\u6807\u7B7E
-label_com_aeiou_bigbang_domain_content_title=\u5185\u5BB9\u6807\u9898
+label_com_aeiou_bigbang_domain_content_sourceurl=\u6E90\u7F51\u9875\u7684\u5730\u5740 *
+label_com_aeiou_bigbang_domain_content_title=\u7F51\u9875\u5185\u5BB9\u6807\u9898 *
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=\u4E2A\u4EBA\u7A7A\u95F4\u6807\u7B7E
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
