--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 12 11:38:53 EST 2013
+#Tue Feb 12 13:34:02 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -18,14 +18,15 @@ label_com_aeiou_bigbang_domain_circle_owner=Owner
 label_com_aeiou_bigbang_domain_circle_plural=Circles
 label_com_aeiou_bigbang_domain_circle_version=Version
 label_com_aeiou_bigbang_domain_content=Content
+label_com_aeiou_bigbang_domain_content_authority=Authority
 label_com_aeiou_bigbang_domain_content_commonbigtag=Public Space Tag
 label_com_aeiou_bigbang_domain_content_conentcache=Can Copy The Content Here
 label_com_aeiou_bigbang_domain_content_id=Id
 label_com_aeiou_bigbang_domain_content_plural=Contents
 label_com_aeiou_bigbang_domain_content_publisher=Publisher
 label_com_aeiou_bigbang_domain_content_sourceurl=Source URL
-label_com_aeiou_bigbang_domain_content_tags=My Space Tags
 label_com_aeiou_bigbang_domain_content_title=Title
+label_com_aeiou_bigbang_domain_content_uncommonbigtag=Personal Space Tag
 label_com_aeiou_bigbang_domain_content_version=Version
 label_com_aeiou_bigbang_domain_customize=Customize
 label_com_aeiou_bigbang_domain_customize_cuskey=Cus Key
