--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,11 +1,15 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 11 22:25:13 EST 2013
+#Tue Feb 12 19:07:15 EST 2013
 \ =\u7A7A
+ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
 Circle=\u5708\u5B50
 Content=\u5185\u5BB9
 Customize=\u81EA\u5B9A\u4E49
+ONLY_FOR_SELECTED_PERSON=\u4EC5\u9009\u4E2D\u7684\u4EBA\u53EF\u89C1
+ONLY_MYSELF_CAN_SEE=\u53EA\u6709\u81EA\u5DF1\u80FD\u770B\u89C1
 Remark=\u8BC4\u8BBA
+SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u53EF\u89C1
 Tag_Admin_allcontents=\u5168\u90E8\u5185\u5BB9
 Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
