--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,11 +1,15 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 11 22:25:13 EST 2013
+#Tue Feb 12 19:07:15 EST 2013
 \ =EMPTY
+ALL_MY_TEAM_CAN_SEE=visible for my friends
 Big\ Tag=Category
 Circle=Circle
 Content=Content
 Customize=Customize
+ONLY_FOR_SELECTED_PERSON=visible for selected one
+ONLY_MYSELF_CAN_SEE=visible for myself
 Remark=Remark
+SHOW_TO_EVERY_ONE=visible for everyone.
 Tag_Admin_allcontents=All Contents
 Tag_Admin_fun=fun stuff
 Tag_Admin_health=health
