--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 12 19:07:15 EST 2013
+#Wed Feb 13 10:26:54 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -15,7 +15,7 @@ Tag_Admin_fun=\u641E\u7B11
 Tag_Admin_health=\u5065\u5EB7
 Tag_Admin_international=\u56FD\u9645\u65B0\u95FB
 Tag_Admin_local=\u56FD\u5185\u65B0\u95FB
-Tag_Admin_other=\u5176\u4ED6
+Tag_Admin_other=\u6CA1\u6709\u5206\u7C7B\u7684
 Tag_Admin_science=\u79D1\u6280
 Tag_Admin_study=\u5916\u8BED\u5B66\u4E60
 Tag_Admin_techneque=\u6280\u672F\u8D44\u6599
