I decided to seprate version, because Chinese never go mix with English or Japanese. so the tag need not to be English and mapping to resource file, they are just the tags string what user inputted and saved in DB.

--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Feb 12 19:07:15 EST 2013
+#Thu Feb 14 19:39:46 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible for my friends
 Big\ Tag=Category
@@ -10,18 +10,10 @@ ONLY_FOR_SELECTED_PERSON=visible for selected one
 ONLY_MYSELF_CAN_SEE=visible for myself
 Remark=Remark
 SHOW_TO_EVERY_ONE=visible for everyone.
-Tag_Admin_allcontents=All Contents
-Tag_Admin_fun=fun stuff
-Tag_Admin_health=health
-Tag_Admin_international=international news
-Tag_Admin_local=local news
-Tag_Admin_other=other
-Tag_Admin_science=science
-Tag_Admin_study=study
-Tag_Admin_techneque=techneque
 Twitter=Twitter
 User\ Account=User Account
 agree=I Agree\!
+allcontents=All Contents
 button_cancel=Cancel
 button_end=End
 button_find=Find
