--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 13 21:14:53 EST 2013
+#Thu Feb 14 19:39:46 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -10,18 +10,10 @@ ONLY_FOR_SELECTED_PERSON=\u4EC5\u9009\u4E2D\u7684\u4EBA\u53EF\u89C1
 ONLY_MYSELF_CAN_SEE=\u53EA\u6709\u81EA\u5DF1\u80FD\u770B\u89C1
 Remark=\u8BC4\u8BBA
 SHOW_TO_EVERY_ONE=\u6240\u6709\u4EBA\u90FD\u80FD\u53EF\u89C1
-Tag_Admin_allcontents=\u5168\u90E8\u5185\u5BB9
-Tag_Admin_fun=\u641E\u7B11
-Tag_Admin_health=\u751F\u6D3B
-Tag_Admin_international=\u56FD\u9645\u65B0\u95FB
-Tag_Admin_local=\u56FD\u5185\u65B0\u95FB
-Tag_Admin_other=\u672A\u5206\u7C7B\u5185\u5BB9
-Tag_Admin_science=\u79D1\u6280
-Tag_Admin_study=\u5916\u8BED\u5B66\u4E60
-Tag_Admin_techneque=\u6280\u672F\u8D44\u6599
 Twitter=\u63A8\u7279
 User\ Account=\u7528\u6237
 agree=\u4E25\u91CD\u540C\u610F\uFF01
+allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
