added hire and fire button (function not yet) removed list all button from show page.

--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 13 10:40:36 EST 2013
+#Fri Feb 15 11:14:05 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -58,7 +58,12 @@ label_com_aeiou_bigbang_domain_useraccount_listento=Listento
 label_com_aeiou_bigbang_domain_useraccount_name=Name
 label_com_aeiou_bigbang_domain_useraccount_password=Password
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
+label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_version=Version
+label_public_8blancspace=\        
+label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
+label_public_firesomeone=Not suitable anymore, sorry\!
+label_public_hiresomeone=This guy is amazing, let him work for me\!
 label_public_index=Go his big uncle's, \u5317\u4EAC\u53C8\u4E0B\u96FE\u4E86 ( |\:-x)
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
