--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 13 10:40:36 EST 2013
+#Fri Feb 15 11:37:32 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -11,7 +11,7 @@ label_com_aeiou_bigbang_domain_bigtag_version=Version
 label_com_aeiou_bigbang_domain_circle=Circle
 label_com_aeiou_bigbang_domain_circle_circlename=Circle Name
 label_com_aeiou_bigbang_domain_circle_createddate=Created Date
-label_com_aeiou_bigbang_domain_circle_description=Description
+label_com_aeiou_bigbang_domain_circle_description=\u8BF4\u660E
 label_com_aeiou_bigbang_domain_circle_id=Id
 label_com_aeiou_bigbang_domain_circle_members=Members
 label_com_aeiou_bigbang_domain_circle_owner=Owner
@@ -51,14 +51,19 @@ label_com_aeiou_bigbang_domain_twitter_twitdate=Twit Date
 label_com_aeiou_bigbang_domain_twitter_twitent=Twitent
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
-label_com_aeiou_bigbang_domain_useraccount_description=Description
-label_com_aeiou_bigbang_domain_useraccount_email=Email
+label_com_aeiou_bigbang_domain_useraccount_description=\u4E2A\u6027\u7B7E\u540D
+label_com_aeiou_bigbang_domain_useraccount_email=\u7535\u5B50\u90AE\u7BB1
 label_com_aeiou_bigbang_domain_useraccount_id=Id
-label_com_aeiou_bigbang_domain_useraccount_listento=Listento
-label_com_aeiou_bigbang_domain_useraccount_name=Name
-label_com_aeiou_bigbang_domain_useraccount_password=Password
+label_com_aeiou_bigbang_domain_useraccount_listento=\u96C7\u7528\u5458\u5DE5
+label_com_aeiou_bigbang_domain_useraccount_name=\u540D\u5B57 *
+label_com_aeiou_bigbang_domain_useraccount_password=\u5BC6\u7801 *
 label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
+label_com_aeiou_bigbang_domain_useraccount_price=\u8981\u6C42\u85AA\u6C34
 label_com_aeiou_bigbang_domain_useraccount_version=Version
+label_public_8blancspace=\         
+label_public_expectedSalary=\u85AA\u6C34\u8981\u6C42\uFF1A{0}\u91D1\u5E01/\u6708
+label_public_firesomeone=\u4E0D\u518D\u9700\u8981\u4ED6\u4E86\uFF0C\u62B1\u6B49\uFF01
+label_public_hiresomeone=\u8FD9\u5BB6\u4F19\u5F88\u68D2\uFF0C\u96C7\u4ED6\u4E3A\u6211\u7684\u4E2A\u4EBA\u4E3B\u9875\u5DE5\u4F5C
 label_public_index=\u6B22\u8FCE\u6765\u5927\u4E3B\u7F16{0}\u7684\u7A7A\u95F4----{1}
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
