--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 14 19:39:46 EST 2013
+#Fri Feb 15 11:44:31 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -38,7 +38,7 @@ entity_not_found_single=No {0} found with this id.
 entity_reference_not_managed=This relationship is managed from the {0} side.
 entity_show=Show {0}
 entity_tag_create=\u65B0\u52A0\u4E00\u4E2A\u6807\u7B7E\uFF01
-entity_update=Update {0}
+entity_update=\ \u4FEE\u6539{0}
 error_dataaccessfailure_problemdescription=Sorry, a problem occurred while accessing the database.
 error_dataaccessfailure_title=Data access failure
 error_resourcenotfound_problemdescription=Sorry, we did not find the resource you were looking for.
@@ -74,7 +74,7 @@ list_previous=Previous Page
 list_size=List results per page\:
 pleaseAddSomeContentHere=\u54E5\u4EEC\uFF0C\u5982\u679C\u5728\u522B\u7684\u7F51\u7AD9\u4E0A\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\uFF0C\u522B\u5FD8\u70B9\u5DE6\u8FB9\u6309\u94AE\uFF0C\u7ED9\u52A0\u4E2A\u94FE\u63A5\u8FD9\u91CC\uFF01 ( |\:------------------------------>)
 public=\u516C\u5171
-publicDescription=\u7CBE\u9009\u4F18\u8D28\u65B0\u95FB\u5E73\u53F0\u3001\u7BA1\u7406\u5E38\u7528\u7F51\u9875\u8FDE\u63A5\u3001\u670B\u53CB\u56E2\u961F\u5171\u4EAB\u4FE1\u606F\u3001\u7B49\u7B49\uFF0C\u8BF7\u4F60\u5E2E\u6211\u60F3\u60F3\u8FD9\u4E2A\u5E73\u53F0\u8FD8\u80FD\u591F\u505A\u4EC0\u4E48\u7528\uFF1F
+publicDescription=\u62E3\u9009\u63A8\u8350\u65B0\u95FB\u3001\u7BA1\u7406\u4E66\u7B7E\u8FDE\u63A5\u3001\u670B\u53CB\u4FE1\u606F\u5171\u4EAB\u3001\u7EC4\u5EFA\u4E2A\u4EBA\u7F51\u7AD9\u3001\u7B49\u7B49\uFF0C\u8BF7\u4F60\u5E2E\u6211\u60F3\u60F3\u8FD9\u4E2A\u5E73\u53F0\u8FD8\u80FD\u591F\u505A\u4EC0\u4E48\u7528\uFF1F
 security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801
