no worry about usre will delet other's content. only loged in user can see the tags and tags. and can see only their own.

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 15 11:44:31 EST 2013
+#Fri Feb 15 17:07:06 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -75,6 +75,7 @@ list_size=List results per page\:
 pleaseAddSomeContentHere=\u54E5\u4EEC\uFF0C\u5982\u679C\u5728\u522B\u7684\u7F51\u7AD9\u4E0A\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\uFF0C\u522B\u5FD8\u70B9\u5DE6\u8FB9\u6309\u94AE\uFF0C\u7ED9\u52A0\u4E2A\u94FE\u63A5\u8FD9\u91CC\uFF01 ( |\:------------------------------>)
 public=\u516C\u5171
 publicDescription=\u62E3\u9009\u63A8\u8350\u65B0\u95FB\u3001\u7BA1\u7406\u4E66\u7B7E\u8FDE\u63A5\u3001\u670B\u53CB\u4FE1\u606F\u5171\u4EAB\u3001\u7EC4\u5EFA\u4E2A\u4EBA\u7F51\u7AD9\u3001\u7B49\u7B49\uFF0C\u8BF7\u4F60\u5E2E\u6211\u60F3\u60F3\u8FD9\u4E2A\u5E73\u53F0\u8FD8\u80FD\u591F\u505A\u4EC0\u4E48\u7528\uFF1F
+security_login=\u767B\u5F55
 security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801
@@ -83,7 +84,7 @@ security_login_message=\u8FD9\u91CC\u662F\u5DF2\u6CE8\u518C\u7528\u6237\u767B\u5
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
 security_login_title2=\u65B0\u7528\u6237\u8BF7\u770B\u8FC7\u6765
 security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
-security_logout=\u6CE8\u9500\u5F53\u524D\u7528\u6237
+security_logout=\u9000\u51FA\u767B\u5F55\u72B6\u6001
 security_signup_message=This is for new user, the following is our aggreement \:\n 1. you password and infomation is not safe here, and not safe anywhere in the internet. /n2. we might have to give up protecting your right when we are muscled by the government ,  3.You have to protect youself if you edited anything which will cause anyone unhappy.  if you agree all of them, please click the agree buton at the end, then in the coming page, select an unused username, set up your password and contact email, then go \:-)
 selenium_menu_test_suite=Test Suite
 webflow_endstate_message=\u8FD9\u5DF2\u7ECF\u662F\u6700\u540E\u4E86
