--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 14 19:39:46 EST 2013
+#Fri Feb 15 17:07:06 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible for my friends
 Big\ Tag=Category
@@ -75,6 +75,7 @@ list_size=List results per page\:
 pleaseAddSomeContentHere=Hey Boddy, Don't forget to add some interesting stuff by clicking this button\:--------------------------------------------------------------------------->
 public=public
 publicDescription=Good Filtered News For Specific Person\uFF0CManaged Persional Links For Yourself\uFF0CInfomation Platform For Team and Friends, And More... 
+security_login=Login
 security_login_form_name=Name
 security_login_form_name_message=Enter your name
 security_login_form_password=Password
