before change Short back to int

--- a/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 15 11:14:05 EST 2013
+#Mon Feb 18 21:53:47 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -65,6 +65,7 @@ label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=Not suitable anymore, sorry\!
 label_public_hiresomeone=This guy is amazing, let him work for me\!
 label_public_index=Go his big uncle's, \u5317\u4EAC\u53C8\u4E0B\u96FE\u4E86 ( |\:-x)
+label_rememberme=Remember me
 menu_category_bigtag_label=Big Tag
 menu_category_circle_label=Circle
 menu_category_content_label=Content
