--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Feb 15 17:07:06 EST 2013
+#Mon Feb 18 10:20:57 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -17,7 +17,7 @@ allcontents=\u5168\u90E8\u5185\u5BB9
 button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
-button_home=\u5927\u4E3B\u7F16
+button_home=\u4E3B\u9875
 button_proceed=Proceed
 button_reset=\u6E05\u7A7A
 button_save=\u4FDD\u5B58
@@ -72,9 +72,9 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-pleaseAddSomeContentHere=\u54E5\u4EEC\uFF0C\u5982\u679C\u5728\u522B\u7684\u7F51\u7AD9\u4E0A\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\uFF0C\u522B\u5FD8\u70B9\u5DE6\u8FB9\u6309\u94AE\uFF0C\u7ED9\u52A0\u4E2A\u94FE\u63A5\u8FD9\u91CC\uFF01 ( |\:------------------------------>)
+pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u8BF7\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u7ACB\u5373\u8DDF\u670B\u53CB\u5206\u4EAB\uFF01 ( |\:------------------------------>)
 public=\u516C\u5171
-publicDescription=\u62E3\u9009\u63A8\u8350\u65B0\u95FB\u3001\u7BA1\u7406\u4E66\u7B7E\u8FDE\u63A5\u3001\u670B\u53CB\u4FE1\u606F\u5171\u4EAB\u3001\u7EC4\u5EFA\u4E2A\u4EBA\u7F51\u7AD9\u3001\u7B49\u7B49\uFF0C\u8BF7\u4F60\u5E2E\u6211\u60F3\u60F3\u8FD9\u4E2A\u5E73\u53F0\u8FD8\u80FD\u591F\u505A\u4EC0\u4E48\u7528\uFF1F
+publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u4E2A\u4EBA\u4E3B\u9875--\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF0C\u5982\uFF1A/tao
 security_login=\u767B\u5F55
 security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
