--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 20 11:02:49 EST 2013
+#Wed Feb 20 16:19:01 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -18,6 +18,7 @@ button_cancel=\u53D6\u6D88
 button_end=End
 button_find=Find
 button_home=\u4E3B\u9875
+button_myhome=\u6211\u7684\u4E3B\u9875
 button_proceed=Proceed
 button_reset=\u6E05\u7A7A
 button_save=\u4FDD\u5B58
@@ -57,6 +58,9 @@ field_required=required
 field_simple_validation=Enter {0} {1}
 global_generic={0}
 global_language=\u8BED\u8A00
+global_language_chinese=\u4E2D\u6587
+global_language_english=English
+global_language_french=Fran\u00E7ais
 global_language_switch=Switch language to {0}
 global_menu_find=Find by {0}
 global_menu_list=List all {0}
@@ -80,7 +84,7 @@ security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801
 security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
-security_login_message=\u8FD9\u91CC\u662F\u5DF2\u6CE8\u518C\u7528\u6237\u767B\u5F55\u7528\u7684\uFF0C\u65B0\u7528\u6237\u8BF7\u70B9\u53F3\u8FB9\u7684\u7A97\u53E3\u7684\u201D\u4E25\u91CD\u540C\u610F\u201C\u94FE\u63A5\u6CE8\u518C\u5148\u3002\u8C22\u8C22~
+security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684\u201D\u4E25\u91CD\u540C\u610F\u201C\u94FE\u63A5\u95EA\u7535\u6CE8\u518C\uFF01\u8C22\u8C22~
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
 security_login_title2=\u65B0\u7528\u6237\u8BF7\u770B\u8FC7\u6765
 security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
