added function of transfering balance when hire and fire a editor. optimized resource. also added a String field for account for layout setting.
it's about time to add layout and twitter?

All honor to our dear God!

--- a/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 20 15:00:08 EST 2013
+#Wed Feb 20 23:43:28 EST 2013
 application_name=Bigbang
 label_com_aeiou_bigbang_domain_bigtag=Big Tag
 label_com_aeiou_bigbang_domain_bigtag_authority=Authority
@@ -51,9 +51,11 @@ label_com_aeiou_bigbang_domain_twitter_twitdate=Twit Date
 label_com_aeiou_bigbang_domain_twitter_twitent=Twitent
 label_com_aeiou_bigbang_domain_twitter_version=Version
 label_com_aeiou_bigbang_domain_useraccount=User Account
+label_com_aeiou_bigbang_domain_useraccount_balance=
 label_com_aeiou_bigbang_domain_useraccount_description=Description
 label_com_aeiou_bigbang_domain_useraccount_email=Email
 label_com_aeiou_bigbang_domain_useraccount_id=Id
+label_com_aeiou_bigbang_domain_useraccount_layout=
 label_com_aeiou_bigbang_domain_useraccount_listento=Listento
 label_com_aeiou_bigbang_domain_useraccount_name=Name *
 label_com_aeiou_bigbang_domain_useraccount_password=Password *
@@ -61,6 +63,7 @@ label_com_aeiou_bigbang_domain_useraccount_plural=User Accounts
 label_com_aeiou_bigbang_domain_useraccount_price=Expected Salary
 label_com_aeiou_bigbang_domain_useraccount_version=Version
 label_public_8blancspace=\        
+label_public_balance=Your Balance\: {} Golden Coint
 label_public_expectedSalary=The Salary Charged\: {0} Golden Coint.
 label_public_firesomeone=It's time to say Good-Bye, sorry\!
 label_public_hiresomeone=This guy is amazing, let him work for me\!
