--- a/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 20 16:19:01 EST 2013
+#Wed Feb 20 22:53:01 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -44,8 +44,8 @@ error_dataaccessfailure_problemdescription=Sorry, a problem occurred while acces
 error_dataaccessfailure_title=Data access failure
 error_resourcenotfound_problemdescription=Sorry, we did not find the resource you were looking for.
 error_resourcenotfound_title=Requested Resource Not Found
-error_uncaughtexception_problemdescription=Sorry, we encountered an internal error.
-error_uncaughtexception_title=Internal Error
+error_uncaughtexception_problemdescription=The webpage you are visiting is empty, please try agian, or register it now\!
+error_uncaughtexception_title=Empty Web Page
 exception_cookie=Cookies
 exception_details=Details
 exception_message=Exception Message
