--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Feb 20 16:19:01 EST 2013
+#Thu Feb 21 12:00:28 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -12,7 +12,7 @@ Remark=Remark
 SHOW_TO_EVERY_ONE=visible to everyone.
 Twitter=Twitter
 User\ Account=User Account
-agree=I Agree\!
+agree=I Agree, Start Signup\!
 allcontents=All Contents
 button_cancel=Cancel
 button_end=End
