admin can updat balance

--- a/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_fr_CA.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 21 12:00:28 EST 2013
+#Thu Feb 21 12:39:16 EST 2013
 \ =EMPTY
 ALL_MY_TEAM_CAN_SEE=visible to my friends
 Big\ Tag=Category
@@ -76,7 +76,7 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-pleaseAddSomeContentHere=Found some thing good? Clicking the right button, share with friends right away ( |\:------------------------->)
+pleaseAddSomeContentHere=Found some thing good? Why not click and share with friends right away\!
 public=public
 publicDescription=Present Filtered News For Special Person, Manage Persional Bookmarks On Cloud, Share Useful Stuff with Team and Friends, And More... 
 security_login=Login
