--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Feb 21 12:00:47 EST 2013
+#Thu Feb 21 12:41:35 EST 2013
 \ =\u7A7A
 ALL_MY_TEAM_CAN_SEE=\u5728\u670B\u53CB\u5708\u5185\u53EF\u89C1
 Big\ Tag=\u7C7B\u522B
@@ -76,7 +76,7 @@ list_next=Next Page
 list_page=Page {0} of {1}
 list_previous=Previous Page
 list_size=List results per page\:
-pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u8BF7\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u7ACB\u5373\u8DDF\u670B\u53CB\u5206\u4EAB\uFF01 ( |\:--------------->)
+pleaseAddSomeContentHere=\u770B\u5230\u6709\u8DA3\u7684\u4E1C\u897F\u4E86\uFF1F\u4F55\u4E0D\u731B\u51FB\u53F3\u8FB9\u7684\u6309\u94AE\uFF0C\u8DDF\u670B\u53CB\u7ACB\u5373\u5206\u4EAB\uFF01
 public=\u516C\u5171
 publicDescription=\u8DDF\u670B\u53CB\u5206\u4EAB\u6709\u8DA3\u65B0\u95FB\u3001\u5206\u7C7B\u7BA1\u7406\u4E66\u7B7E\u94FE\u63A5\u3001\u56E2\u961F\u534F\u4F5C\u3001\u5EFA\u7ACB\u80FD\u81EA\u52A8\u66F4\u65B0\u7684\u4E2A\u4EBA\u4E3B\u9875\uFF08\u7F51\u5740\u540E\u52A0\u6CE8\u518C\u7528\u6237\u540D\u5C31\u662F\u4E2A\u4EBA\u4E3B\u9875\uFF09\uFF0C\u5C31\u662F\u8FD9\u513F\u4E86\uFF01
 security_login=\u767B\u5F55
@@ -84,7 +84,7 @@ security_login_form_name=\u7528\u6237
 security_login_form_name_message=\u8BF7\u5728\u6B64\u8F93\u5165\u7528\u6237\u540D
 security_login_form_password=\u5BC6\u7801
 security_login_form_password_message=\u8BF7\u5728\u6B64\u8BBE\u7F6E\u4E00\u4E2A\u4E0D\u5C11\u4E8E4\u4F4D\u7684\u5BC6\u7801
-security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684\u201D\u4E25\u91CD\u540C\u610F\u201C\u94FE\u63A5\u95EA\u7535\u6CE8\u518C\uFF01\u8C22\u8C22~
+security_login_message=\u6CA1\u6709\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF1F\u5FEB\u731B\u51FB\u53F3\u8FB9\u7684\u7A97\u53E3\u7684[\u4E25\u91CD\u540C\u610F]\u94FE\u63A5\u95EA\u7535\u6CE8\u518C\u5427\uFF01
 security_login_title=\u5DF2\u6CE8\u518C\u7528\u6237\u8BF7\u5728\u6B64\u767B\u5F55
 security_login_title2=\u65B0\u7528\u6237\u8BF7\u770B\u8FC7\u6765
 security_login_unsuccessful=\u4F60\u7684\u767B\u5F55\u8FC7\u7A0B\u672A\u80FD\u6210\u529F, \u8BF7\u67E5\u770B\u539F\u56E0\u540E\u518D\u6B21\u5C1D\u8BD5\u3002\u539F\u56E0\uFF1A 
